--- a/DoAn2/app/src/main/res/values/strings.xml
+++ b/DoAn2/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">DoAn</string>
-    <string name="navigation_open">Open navigtion drawer</string>
-    <string name="navigation_close">Close navigtion drawer</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
