--- a/DoAn2/app/src/main/res/values/strings.xml
+++ b/DoAn2/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="question1">2. _______ raiding for camels was a significant part of Bedouin life has been documented in Wilfed Thesiger’s Arabian Sands.</string>
+    <string name="question5">5. He gave his listeners a vivid _______ of his journey through Peru.</string>
 
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
