--- a/PJ/Project/app/src/main/res/values/strings.xml
+++ b/PJ/Project/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="channel_name">channel1</string>
+    <string name="channel_description">description1</string>
 </resources>
